[build-system]
requires = ["scikit-build-core>=0.3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "nodejs-wheel"
dynamic = ["version"]
description = "unoffical Node.js package"
authors = [
  {name = "Jinzhe Zeng", email = "jinzhe.zeng@rutgers.edu"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
]
dependencies = [
]
requires-python = ">=3.7"
readme = "README.md"
keywords = ["nodejs"]

[project.urls]
repository = "https://github.com/njzjz/nodejs-wheel"

[project.scripts]
node = "nodejs_wheel.executable:node"
npm = "nodejs_wheel.executable:npm"
npx = "nodejs_wheel.executable:npx"

[tool.scikit-build]
wheel.install-dir = "nodejs_wheel"
wheel.py-api = "py2.py3"
wheel.packages = [
  "nodejs_wheel",
]
cmake.args = [
]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]

[tool.cibuildwheel]
build = ["cp311-*"]
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
build-verbosity = "1"
test-command = "node -h && npm --version && npx --version"
