[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nodejs-wheel"
dynamic = ["version", "dependencies"]
description = "unoffical Node.js package"
authors = [
  {name = "Jinzhe Zeng", email = "jinzhe.zeng@rutgers.edu"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
]
requires-python = ">=3.7"
readme = "README.md"
keywords = ["nodejs"]

[project.urls]
repository = "https://github.com/njzjz/nodejs-wheel"

[project.scripts]
node = "nodejs_wheel.executable:_node_entry_point"
npm = "nodejs_wheel.executable:_npm_entry_point"
npx = "nodejs_wheel.executable:_npx_entry_point"

[tool.setuptools_scm]
root = ".."
